Fixed the regex and textcolor on the sign up button in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -269,6 +269,7 @@ label {
   margin-bottom: 5px;
 }
 
+
 input {
   width: 100%;
   padding: 10px;
@@ -276,13 +277,20 @@ input {
   border-radius: 5px;
 }
 
+.input-with-icon {
+  display: flex;
+  align-items: center;
+}
+
+.check-icon {
+  margin-left: 5px;
+}
+
 button {
   width: 100%;
   padding: 10px;
   background-color: var(--bg-color-light);
-  /* Changed background color */
-  color: var(--text-color-dark);
-  /* Changed text color */
+  color: var(--text-color-light);
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -290,7 +298,5 @@ button {
 
 button:hover {
   background-color: var(--bg-color-light);
-  /* Changed background color */
   color: var(--text-color-dark);
-  /* Changed text color */
 }
